# cpp11app

./: .gitignore  .gitmodules  .projections.json  CMakeLists.txt  CTestCustom.ctest.in  Doxyfile  Gemfile  Guardfile  README.ROADMAP  README.md  Rakefile  config.h.in  local.vim  local_c.vim
gtest/: CMakeLists.txt  README.gtest
src/: CMakeLists.txt  README.h  app.cc  app.h  everything.h  globals.cc  main.cc  option.cc  option.h  showcase.cc  showcase.h
tests/: CMakeLists.txt  showlog
tests/features/: CMakeLists.txt  showcase.feature
tests/features/step_definitions/: showcase.rb
tests/features/support/: env.rb
tests/functional/: .boilerplate.sh.swp  CMakeLists.txt  boilerplate.sh  suite.sh
tests/unit/: CMakeLists.txt  test_app.cc  test_main.cc  test_option.cc  test_options.cc  testhelper.h
